tests/compile_fail/resolve_with_bad_path.rs
use conflaguration::Settings;

#[derive(Settings)]
struct BadConfig {
    #[setting(resolve_with = "not a valid path!!!")]
    field: String,
}

fn main() {}
