tests/compile_fail/resolve_with_bad_path.stderr
error: unexpected token
 --> tests/compile_fail/resolve_with_bad_path.rs:5:30
  |
5 |     #[setting(resolve_with = "not a valid path!!!")]
  |                              ^^^^^^^^^^^^^^^^^^^^^
